# project-creator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.opencode/: opencode.json
.opencode/agents/: architecture-reviewer.md  code-reviewer.md  pre-commit-checker.md  security-diagnosis.md  tdd-reviewer.md
.opencode/handoffs/: 2026-06-10-t002-plugin-base-mixins.md  2026-06-12-t003-progress-reporter.md  2026-06-13-t004-generation-transaction.md  2026-06-16-t005-plugin-registry-validation.md  2026-06-17-t006-generation-stages-review-round3.md  2026-06-17-t006-generation-stages-tdd-complete.md  2026-06-17-t007-orchestrator-cli-tdd-testfirst.md  2026-06-18-t008-plugin-fastapi-tdd-testfirst.md  2026-06-21-t010-plugin-react-tdd-review.md  2026-06-22-T-011-htmx-plugin-final.md  2026-06-22-T-011-htmx-plugin-tdd.md  2026-06-22-T-011-round2-tdd-review.md  2026-06-22-T-011-round3-tdd-review.md  2026-06-22-T-012-qapplication-mainwindow-tdd-review.md  2026-06-22-t010-plugin-react-implementation.md  2026-06-23-T-012-qapplication-mainwindow-implementation.md  2026-06-23-T-013-generation-worker-implementation.md  2026-06-24-T-014-wizard-screens-review.md  2026-06-25-t016-integration-tests-foundation.md  2026-06-25-t017-integration-tests-cli-pipeline.md  2026-06-25-t017-tdd-review.md  2026-06-26-t018-implementation.md  2026-06-26-t018-tdd-review-round2.md  2026-06-26-t018-tdd-review.md  2026-06-26-t019-output-directory-picker.md  review-tdd-001-domain-models.json  review-tdd-002-plugin-base-mixins.json  review-tdd-004-generation-transaction-round2.json  review-tdd-005-plugin-registry-validation-round2.json  review-tdd-005-plugin-registry-validation-round3.json  review-tdd-005-plugin-registry-validation.json  review-tdd-008-plugin-fastapi-round3.json  review-tdd-008-plugin-fastapi.json  review-tdd-009-plugin-django-round2.json  review-tdd-010-plugin-react.json  review-tdd-015-wizard-screens-4-5-round3.json  review-tdd-015-wizard-screens-4-5-round5.json  session-handoff.md
docs/context/: architecture.md  dependency-analysis.md  pipeline.md  post-mortem-005-plugin-registry-validation.md  post-mortem_template.md  process-flow.md
docs/plan/: AI_Assisted_Development_Production_Architecture_and_MCP_Tooling.txt  Agent_Configuration_Prompt_Skills_and_MCP_Tooling_for_AI_Assisted_Development.txt  extract_pdfs.py
scripts/: generate_diagrams.py  ticket_map.yaml  ticket_viz.py
scripts/diagrams/: architecture.diag  generation-pipeline.diag
src/forge/: __main__.py  app.py
tests/integration/: conftest.py  test_all_plugins.py  test_cli_headless.py  test_domain_models.py  test_error_scenarios.py  test_fastapi_plugin.py  test_gui_worker.py  test_orchestrator_pipeline.py  test_overwrite_flow.py  test_plugin_capabilities.py  test_plugin_discovery.py  test_progress_reporter.py  test_transaction.py  test_validation.py
tests/unit/: _shared.py  conftest.py  test_domain_models.py  test_main_window.py  test_orchestrator.py  test_output_directory_picker.py  test_plugin_base.py  test_plugin_django.py  test_plugin_fastapi.py  test_plugin_htmx.py  test_plugin_react.py  test_progress.py  test_registry.py  test_stages.py  test_transaction.py  test_validation.py  test_wizard_screens.py  test_wizard_screens_4_5.py  test_workers.py
(+85 files in other folders)
