[project]
name = "forge"
version = "0.1.0"
description = "Local-first desktop application for generating project structures from predefined templates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.6.0,<6.8.0",
]

[project.scripts]
forge = "forge.__main__:main"

[project.entry-points."forge.plugins"]
fastapi = "forge.plugins.fastapi:FastapiPlugin"
django = "forge.plugins.django:DjangoPlugin"
react = "forge.plugins.react:ReactPlugin"
htmx = "forge.plugins.htmx:HtmxPlugin"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
